# SemanticModelBuilder

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  REFACTORING_SUMMARY.md  description_of_point_list_temp.md  example_prefill_usage.py  example_usage.py  expand_hvac_csv_generic.py  goal_config_temp  group_nodes.py  migrate_to_new_structure.py  pyproject.toml  setup_dev.py  test.csv  test_prefill_functionality.py  test_query_fix.sparql  test_refactored_functionality.py  test_s223_prefill.py  to_objects.ipynb  to_objects.py
.github/workflows/: ci.yml
BrickModelInterface/: __init__.py  brick_to_grafana.py  create_metadata_survey.py  generate_shacl.py  get_metadata.py  model_builder.py  parse_points.py  read_metadata_survey.py  unit_conversion.py
BrickModelInterface/brick-templates/: brick-templates.yml  nodes.yml
BrickModelInterface/qudt/: known_units.csv  qudt_units.ttl
BrickModelInterface/shacl-requirements/: constraints.ttl  points-shapes.ttl
building_structure_output/test_site/test_building/: config.json  hvac.csv  space.csv  tstat.csv
dataclasses/: nb.ipynb  test_window_template.py  window_manual.py  window_template.py
dataclasses/templates/brick-templates/: nodes.yml  relations.yml
docs/: conf.py  index.rst
easy_config_output/easy_config_site/test_building/: config.json  space.csv  tstat.csv  window.csv
examples/: basic_building_model.py  building_survey.json  example_objects.py  example_prefill_usage.py  example_thermostat_data.py  example_usage.py  survey_workflow.py  test-example.py  thermostat_metadata.json  unit_conversion_example.py
examples/test_site/test_build/: config.json  hvac.csv  tstat.csv  window.csv  zone.csv
general_survey_output/general_site/test_building/: window.csv
s223_test_site/test_build/: config.json  hvac.csv  site.csv  space.csv  tstat.csv  window.csv  zone.csv
src/semantic_mpc_interface/: __init__.py  brick_to_grafana.py  conversion.py  create_metadata_survey.py  generate_shacl.py  get_metadata.py  grafana.py  inference.py  load_model.py  metadata.py  model_builder.py  namespaces.py  parse_points.py  points.py  read_metadata_survey.py  survey.py  unit_conversion.py  utils.py  validation.py
src/semantic_mpc_interface/data/qudt/: known_units.csv
src/semantic_mpc_interface/templates/: rules.md
src/semantic_mpc_interface/templates/brick-templates/: entities.yml  relations.yml  values.yml
src/semantic_mpc_interface/templates/s223-templates/: entities.yml  relations.yml  values.yml
test_prefill_output/test_site/test_building/: hp-rtu.csv  window.csv
test_site/test_build/: config.json  hp-rtu.csv  hvac.csv  site.csv  space.csv  tstat.csv  window.csv  zone.csv
tests/: test_brick_to_grafana.py  test_conversion.py  test_metadata.py  test_model_builder.py  test_shacl_handler.py
tutorial/: bldg1.ttl  bldg2.ttl  shapes.ttl  survey-brick-model.ttl  test-brick-model-reasoned.ttl  test-brick-model.ttl  test-example.py  test-s223-model-reasoned.ttl  test-s223-model.ttl  testing-package-223.ipynb  testing-package.ipynb  testing-package_sang.ipynb  testing_hpflex.ipynb
tutorial/brick-test_site/test_build/: config.json  hvac.csv  site.csv  tstat.csv  window.csv  zone.csv
tutorial/metadata-survey-hpflex/easy-config-test/hvac/: hvac_units.csv
tutorial/metadata-survey-hpflex/easy-config-test/zones/: zones.csv
tutorial/metadata-survey-hpflex/filled-easy-config-test/: config.json  site_info.csv
tutorial/metadata-survey-hpflex/filled-easy-config-test/spaces/: zone_1_spaces.csv  zone_3_spaces.csv
tutorial/metadata-survey-hpflex/filled-easy-config-test/windows/: zone_2_windows.csv  zone_3_windows.csv
tutorial/metadata-survey-hpflex/filled-easy-config-test/zones/: zones.csv
tutorial/metadata-survey-hpflex/hpflex_demo/bldg1/: config.json  site_info.csv
tutorial/metadata-survey-hpflex/hpflex_demo/bldg2/: config.json  site_info.csv
tutorial/metadata-survey-hpflex/hpflex_demo2/bldg1/: config.json  site_info.csv
tutorial/metadata-survey/custom-config-test/: config.json  site_info.csv
tutorial/metadata-survey/easy-config-test/: site_info.csv
tutorial/metadata-survey/filled-out-easy-config-test/: point_list.csv
tutorial/metadata-survey/s223-filled-out-easy-config/: config.json  point_list.csv  site_info.csv
tutorial/s223-example/bldg1/: config.json  hvac.csv  site.csv  space.csv  tstat.csv  window.csv  zone.csv
tutorial/s223-test_site/test_build/: config.json  hvac.csv  site.csv  space.csv  tstat.csv  window.csv  zone.csv
tutorial/s223_test_site/test_build/: config.json  hvac.csv  site.csv  space.csv  tstat.csv  window.csv  zone.csv
tutorial/test_s223_site/test_build/: config.json  hvac.csv  site.csv  space.csv  tstat.csv  window.csv  zone.csv
tutorial/test_site/test_build/: config.json  hvac.csv  point_list.csv  site.csv  space.csv  tstat.csv  window.csv  zone.csv
(+67 files in other folders)
