[project]
name = "Semantic_MPC_Interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.1, <3.12"
dependencies = [
    "buildingmotif>=0.3.0",
    "grafanalib>=0.7.1",
    "ipykernel>=6.29.5",
    "oxrdflib>=0.4.0",
    "pandas>=2.0.3",
    "pip>=25.0",
    "pyoxigraph>=0.4.11",
    "pyshacl>=0.26.0",
    "rdflib>=7.1.3",
    "requests>=2.32.4",
]
[tool.setuptools]
packages = ["BrickModelInterface"]
