[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-mpc-interface"
version = "0.1.0"
description = "A Python package for creating and managing semantic building models using Brick Schema and ASHRAE Standard 223P"
keywords = ["building", "semantic", "brick", "s223", "ontology", "rdf"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8.1, <3.12"
dependencies = [
    "buildingmotif>=0.3.0",
    "rdflib>=7.1.3",
    "pyshacl>=0.26.0",
    "pandas>=2.0.3",
    "requests>=2.32.4",
    "ipykernel>=6.29.5",
    "grafanalib>=0.7.1",
    "oxrdflib>=0.4.0",
]

[project.optional-dependencies]
grafana = ["grafanalib>=0.7.1"]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
]

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_mpc_interface"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# addopts = "--cov=src/semantic_mpc_interface --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
